--- a/Boom小组项目111111/Boom小组项目/Classes/General/Views/Page_3/ActivityTableViewCell.xib
+++ b/Boom小组项目111111/Boom小组项目/Classes/General/Views/Page_3/ActivityTableViewCell.xib
@@ -17,6 +17,7 @@
                 <subviews>
                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="3b6-0T-2a2">
                         <rect key="frame" x="18" y="18" width="94" height="138"/>
+                        <color key="backgroundColor" red="0.89099984217171713" green="0.89099984217171713" blue="0.89099984217171713" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
                             <constraint firstAttribute="width" secondItem="3b6-0T-2a2" secondAttribute="height" multiplier="99:145" id="s9W-YR-4xk"/>
                         </constraints>
