--- a/Boom小组项目111111/Boom小组项目/Classes/General/Views/Page_3/ExpHeaderTableViewCell.xib
+++ b/Boom小组项目111111/Boom小组项目/Classes/General/Views/Page_3/ExpHeaderTableViewCell.xib
@@ -14,52 +14,67 @@
                 <rect key="frame" x="0.0" y="0.0" width="422" height="43"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="t69-vU-qPl">
-                        <rect key="frame" x="8" y="8" width="27" height="27"/>
-                        <constraints>
-                            <constraint firstAttribute="height" constant="27" id="mAY-fz-CFs"/>
-                            <constraint firstAttribute="width" constant="27" id="zph-ly-2gm"/>
-                        </constraints>
-                        <userDefinedRuntimeAttributes>
-                            <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
-                                <real key="value" value="13.5"/>
-                            </userDefinedRuntimeAttribute>
-                            <userDefinedRuntimeAttribute type="boolean" keyPath="layer.masksToBounds" value="YES"/>
-                        </userDefinedRuntimeAttributes>
-                    </imageView>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7rA-EO-lx7">
-                        <rect key="frame" x="39" y="11" width="171" height="21"/>
-                        <constraints>
-                            <constraint firstAttribute="width" constant="171" id="H1z-n8-vGz"/>
-                        </constraints>
-                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                        <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
-                        <nil key="highlightedColor"/>
-                    </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="WAQ-0c-EgR">
                         <rect key="frame" x="372" y="11" width="42" height="21"/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
+                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="0bo-mL-OT9">
+                        <rect key="frame" x="43" y="7" width="150" height="30"/>
+                        <constraints>
+                            <constraint firstAttribute="width" constant="150" id="Oat-h9-BMD"/>
+                        </constraints>
+                        <state key="normal" title="Button">
+                            <color key="titleColor" red="0.33725490200000002" green="0.6588235294" blue="0.65490196079999996" alpha="1" colorSpace="calibratedRGB"/>
+                        </state>
+                        <connections>
+                            <action selector="userNameBtnAction:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="4CP-T5-cyC"/>
+                        </connections>
+                    </button>
+                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="jEM-iS-ULF">
+                        <rect key="frame" x="8" y="8" width="27" height="27"/>
+                        <constraints>
+                            <constraint firstAttribute="width" constant="27" id="Qh2-Cg-47r"/>
+                            <constraint firstAttribute="height" constant="27" id="qc1-mW-LNi"/>
+                        </constraints>
+                        <userDefinedRuntimeAttributes>
+                            <userDefinedRuntimeAttribute type="boolean" keyPath="layer.maskstobounds" value="YES"/>
+                            <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerradius">
+                                <real key="value" value="13.5"/>
+                            </userDefinedRuntimeAttribute>
+                        </userDefinedRuntimeAttributes>
+                    </button>
                 </subviews>
                 <constraints>
                     <constraint firstItem="WAQ-0c-EgR" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" constant="3" id="9YN-Rh-enU"/>
-                    <constraint firstItem="7rA-EO-lx7" firstAttribute="leading" secondItem="t69-vU-qPl" secondAttribute="trailing" constant="4" id="A7x-1O-BJm"/>
-                    <constraint firstItem="t69-vU-qPl" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="LGn-7O-Rxs"/>
+                    <constraint firstItem="0bo-mL-OT9" firstAttribute="leading" secondItem="jEM-iS-ULF" secondAttribute="trailing" constant="8" id="9fZ-kA-Tes"/>
+                    <constraint firstItem="0bo-mL-OT9" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" constant="-1" id="ExH-ad-ui9"/>
+                    <constraint firstItem="0bo-mL-OT9" firstAttribute="centerY" secondItem="jEM-iS-ULF" secondAttribute="centerY" id="HRZ-FZ-0VF"/>
+                    <constraint firstItem="0bo-mL-OT9" firstAttribute="baseline" secondItem="WAQ-0c-EgR" secondAttribute="baseline" id="IXQ-6O-0Ni"/>
+                    <constraint firstItem="jEM-iS-ULF" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="JdB-il-ejl"/>
+                    <constraint firstItem="0bo-mL-OT9" firstAttribute="centerY" secondItem="jEM-iS-ULF" secondAttribute="centerY" id="M8H-oB-fUU"/>
+                    <constraint firstAttribute="bottomMargin" secondItem="0bo-mL-OT9" secondAttribute="bottom" constant="-2" id="bL7-Gk-b0Z"/>
                     <constraint firstAttribute="trailingMargin" secondItem="WAQ-0c-EgR" secondAttribute="trailing" id="iTM-pj-loe"/>
-                    <constraint firstAttribute="leadingMargin" secondItem="t69-vU-qPl" secondAttribute="leading" id="mnt-ol-3ej"/>
                     <constraint firstAttribute="bottomMargin" secondItem="WAQ-0c-EgR" secondAttribute="bottom" constant="3" id="tpr-hX-BTT"/>
-                    <constraint firstItem="7rA-EO-lx7" firstAttribute="centerY" secondItem="t69-vU-qPl" secondAttribute="centerY" id="uzb-jF-JQZ"/>
+                    <constraint firstAttribute="leadingMargin" secondItem="jEM-iS-ULF" secondAttribute="leading" id="yht-r8-Hp9"/>
                 </constraints>
+                <variation key="default">
+                    <mask key="constraints">
+                        <exclude reference="JdB-il-ejl"/>
+                        <exclude reference="ExH-ad-ui9"/>
+                        <exclude reference="M8H-oB-fUU"/>
+                        <exclude reference="bL7-Gk-b0Z"/>
+                    </mask>
+                </variation>
             </tableViewCellContentView>
             <inset key="separatorInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
             <connections>
                 <outlet property="creatTimeLbl" destination="WAQ-0c-EgR" id="njf-5u-Sgl"/>
-                <outlet property="userImgView" destination="t69-vU-qPl" id="9f1-o1-2eV"/>
-                <outlet property="userNameLbl" destination="7rA-EO-lx7" id="eNQ-Va-rVJ"/>
+                <outlet property="userImgBtn" destination="jEM-iS-ULF" id="bLy-zd-q5z"/>
+                <outlet property="userNameBtn" destination="0bo-mL-OT9" id="Gyr-Co-exo"/>
             </connections>
-            <point key="canvasLocation" x="442" y="372"/>
+            <point key="canvasLocation" x="139" y="709"/>
         </tableViewCell>
     </objects>
 </document>
