--- a/Boom小组项目111111/Boom小组项目/Classes/General/Views/Page_3/ExperienceTableViewCell.xib
+++ b/Boom小组项目111111/Boom小组项目/Classes/General/Views/Page_3/ExperienceTableViewCell.xib
@@ -8,11 +8,11 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="expID" rowHeight="354" id="KGk-i7-Jjw" customClass="ExperienceTableViewCell">
-            <rect key="frame" x="0.0" y="0.0" width="422" height="353"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="expID" rowHeight="359" id="KGk-i7-Jjw" customClass="ExperienceTableViewCell">
+            <rect key="frame" x="0.0" y="0.0" width="422" height="358"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="422" height="352"/>
+                <rect key="frame" x="0.0" y="0.0" width="422" height="357"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="jdk-jr-dhH">
@@ -20,10 +20,12 @@
                         <constraints>
                             <constraint firstAttribute="width" secondItem="jdk-jr-dhH" secondAttribute="height" multiplier="406:219" id="FWM-e4-m5S"/>
                             <constraint firstAttribute="width" secondItem="jdk-jr-dhH" secondAttribute="height" multiplier="410:247" id="OnG-Fb-VOc"/>
+                            <constraint firstAttribute="height" constant="247" id="Yeo-bM-zLm"/>
                         </constraints>
                         <variation key="default">
                             <mask key="constraints">
                                 <exclude reference="FWM-e4-m5S"/>
+                                <exclude reference="OnG-Fb-VOc"/>
                             </mask>
                         </variation>
                     </imageView>
@@ -40,6 +42,7 @@
                 <constraints>
                     <constraint firstItem="jdk-jr-dhH" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="1" id="3Cz-Rl-2XO"/>
                     <constraint firstAttribute="leadingMargin" secondItem="PCb-fN-bKf" secondAttribute="leading" id="JSI-tT-24O"/>
+                    <constraint firstAttribute="bottomMargin" secondItem="PCb-fN-bKf" secondAttribute="bottom" constant="20" id="Z34-2K-OBm"/>
                     <constraint firstItem="PCb-fN-bKf" firstAttribute="top" secondItem="jdk-jr-dhH" secondAttribute="bottom" constant="18" id="qKU-zV-bvf"/>
                     <constraint firstItem="jdk-jr-dhH" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="6" id="rFX-Gv-sFP"/>
                     <constraint firstAttribute="trailing" secondItem="jdk-jr-dhH" secondAttribute="trailing" constant="6" id="vp0-Oa-fJa"/>
@@ -50,7 +53,7 @@
                 <outlet property="coverImgView" destination="jdk-jr-dhH" id="Bof-Hn-atr"/>
                 <outlet property="desLbl" destination="PCb-fN-bKf" id="IkW-Ex-OYj"/>
             </connections>
-            <point key="canvasLocation" x="512" y="362.5"/>
+            <point key="canvasLocation" x="512" y="351"/>
         </tableViewCell>
     </objects>
 </document>
