--- a/Boom小组项目111111/Boom小组项目/Base.lproj/Main.storyboard
+++ b/Boom小组项目111111/Boom小组项目/Base.lproj/Main.storyboard
@@ -20,6 +20,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="459" y="380"/>
         </scene>
     </scenes>
 </document>
