--- a/Boom小组项目111111/Boom小组项目/Classes/Scenes/ViewController/Page_4/LoginViewController.xib
+++ b/Boom小组项目111111/Boom小组项目/Classes/Scenes/ViewController/Page_4/LoginViewController.xib
@@ -11,19 +11,75 @@
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="i5M-Pr-FkT">
-            <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+            <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="nWM-p9-WxG">
-                    <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Login_bg.png" translatesAutoresizingMaskIntoConstraints="NO" id="nWM-p9-WxG">
+                    <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
                 </imageView>
+                <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="username" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="G3o-BF-cSF">
+                    <rect key="frame" x="60" y="336" width="294" height="50"/>
+                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                    <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                    <textInputTraits key="textInputTraits"/>
+                </textField>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ZyE-5e-gIP">
+                    <rect key="frame" x="107" y="516" width="66" height="30"/>
+                    <state key="normal" title="password">
+                        <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </state>
+                </button>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="z9k-02-ifK">
+                    <rect key="frame" x="244" y="516" width="53" height="30"/>
+                    <state key="normal" title="register">
+                        <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </state>
+                </button>
+                <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="password" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="dCO-zO-EoW">
+                    <rect key="frame" x="60" y="396" width="294" height="50"/>
+                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                    <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                    <textInputTraits key="textInputTraits"/>
+                </textField>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="DPZ-YC-Bd6">
+                    <rect key="frame" x="60" y="456" width="294" height="50"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="50" id="ik1-ye-uaG"/>
+                    </constraints>
+                    <state key="normal" title="login" image="Login.png">
+                        <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </state>
+                </button>
             </subviews>
             <constraints>
                 <constraint firstItem="nWM-p9-WxG" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="7zi-sv-O9O"/>
+                <constraint firstItem="ZyE-5e-gIP" firstAttribute="top" secondItem="DPZ-YC-Bd6" secondAttribute="bottom" constant="10" id="EQt-cM-lA3"/>
+                <constraint firstItem="G3o-BF-cSF" firstAttribute="width" secondItem="dCO-zO-EoW" secondAttribute="width" id="FUj-hI-KBS"/>
+                <constraint firstItem="DPZ-YC-Bd6" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" constant="60" id="HXG-i8-ZSP"/>
+                <constraint firstItem="G3o-BF-cSF" firstAttribute="height" secondItem="dCO-zO-EoW" secondAttribute="height" id="J7j-N8-fW2"/>
+                <constraint firstItem="nWM-p9-WxG" firstAttribute="leading" secondItem="ZyE-5e-gIP" secondAttribute="trailing" constant="-173" id="N8Z-J4-NqW"/>
                 <constraint firstItem="nWM-p9-WxG" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" id="Q3V-i2-JxV"/>
+                <constraint firstAttribute="bottom" secondItem="DPZ-YC-Bd6" secondAttribute="bottom" constant="230" id="TBS-hd-QfI"/>
+                <constraint firstItem="z9k-02-ifK" firstAttribute="top" secondItem="DPZ-YC-Bd6" secondAttribute="bottom" constant="10" id="TLJ-bQ-pGx"/>
+                <constraint firstItem="dCO-zO-EoW" firstAttribute="top" secondItem="G3o-BF-cSF" secondAttribute="bottom" constant="10" id="TQM-Cn-HKk"/>
+                <constraint firstAttribute="trailing" secondItem="DPZ-YC-Bd6" secondAttribute="trailing" constant="60" id="Uwl-Oq-fhO"/>
+                <constraint firstItem="dCO-zO-EoW" firstAttribute="width" secondItem="DPZ-YC-Bd6" secondAttribute="width" id="Wj6-D5-iPl"/>
                 <constraint firstAttribute="bottom" secondItem="nWM-p9-WxG" secondAttribute="bottom" id="Wph-XJ-RxY"/>
+                <constraint firstItem="dCO-zO-EoW" firstAttribute="height" secondItem="DPZ-YC-Bd6" secondAttribute="height" id="YYg-0e-d5r"/>
                 <constraint firstAttribute="trailing" secondItem="nWM-p9-WxG" secondAttribute="trailing" id="pER-gj-lSq"/>
+                <constraint firstItem="z9k-02-ifK" firstAttribute="leading" secondItem="ZyE-5e-gIP" secondAttribute="trailing" constant="71" id="pTk-yw-hC7"/>
+                <constraint firstItem="DPZ-YC-Bd6" firstAttribute="top" secondItem="dCO-zO-EoW" secondAttribute="bottom" constant="10" id="sSL-yx-Dfq"/>
+                <constraint firstItem="G3o-BF-cSF" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="shh-fh-dxk"/>
+                <constraint firstItem="z9k-02-ifK" firstAttribute="leading" secondItem="nWM-p9-WxG" secondAttribute="trailing" constant="-170" id="xmX-Np-8QH"/>
+                <constraint firstItem="dCO-zO-EoW" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="ydM-Yg-JbW"/>
             </constraints>
+            <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina55"/>
         </view>
     </objects>
+    <resources>
+        <image name="Login.png" width="470" height="78"/>
+        <image name="Login_bg.png" width="640" height="1136"/>
+    </resources>
 </document>
